[package]
name = "better_endpoint_protection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async"] }

